# opengl-sandbox

./: .gitignore  CMakeLists.txt  readme.md
app/: CMakeLists.txt
app/src/: main.cpp
app/src/ui/: graphical_interface.cpp  graphical_interface.hpp
assets/shaders/: environment.vert  expand.geom  gamma.frag  gouraud.vert  highlight.vert  identity.vert  kernel.frag  mirror.frag  origin.vert  post_processing.frag  round_point.frag  standard-with-geom.vert  standard.frag  standard.vert  unlit-textured.frag  unlit.frag
core/: CMakeLists.txt
core/include/core/: environment.hpp  light.hpp  lo_camera.hpp  mesh.hpp  model.hpp  scene.hpp  shader.hpp  texture.hpp  transform.hpp
core/include/core/base/: camera.hpp  common.hpp  environment.hpp  scene.hpp  transform.hpp
core/include/core/graphics/: shader.hpp  texture.hpp  texture_2d.hpp  texture_2d_multisample.hpp  texture_3d.hpp
core/include/core/interface/: window.hpp
core/include/core/light/: directional_light.hpp  light.hpp  point_light.hpp  spot_light.hpp
core/include/core/objects/: cube_primitive.hpp  mesh.hpp  model.hpp  object.hpp  object_3d.hpp  object_buffer.hpp  point_buffer.hpp  point_primitive.hpp  quad_primitive.hpp  sphere_primitive.hpp  texture_2d_renderer.hpp  texture_2d_renderer_multisample.hpp  texture_3d_renderer.hpp  texture_renderer.hpp
core/src/: camera.cpp  environment.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp  texture.cpp  transform.cpp
core/src/base/: camera.cpp  common.cpp  environment.cpp  scene.cpp  transform.cpp
core/src/graphics/: shader.cpp  texture.cpp  texture_2d.cpp  texture_2d_multisample.cpp  texture_3d.cpp
core/src/interface/: window.cpp
core/src/light/: directional_light.cpp  point_light.cpp  spot_light.cpp
core/src/objects/: cube_primitive.cpp  mesh.cpp  model.cpp  object.cpp  object_buffer.cpp  point_buffer.cpp  point_primitive.cpp  quad_primitive.cpp  sphere_primitive.cpp  texture_2d_renderer.cpp  texture_2d_renderer_multisample.cpp  texture_3d_renderer.cpp  texture_renderer.cpp
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/tiny_gltf/: tiny_gltf.cpp
dependencies/tiny_gltf/include/tiny_gltf/: tiny_gltf.h
examples/: CMakeLists.txt
examples/phong-lighting/: point-light.cpp
